5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4192/executions/1752_1524.log
== SUBMITION (2019-05-16 16:14:27) 
-- CODE:
print("ola mundo")
-- EXECUTION TIME:
0.190213
-- TEST CASE 1:
---- input:
150
60
90
---- correct output:
5
---- user output:
ola mundo
-- TEST CASE 2:
---- input:
321
50
90
---- correct output:
9
---- user output:
ola mundo
-- TEST CASE 3:
---- input:
100
1
90
---- correct output:
2
---- user output:
ola mundo
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:14:33) 
-- CODE:
print("ola mundo")
-- OUTPUT:
ola mundo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:15:18) 
-- CODE:
print("eu odeio do fundo do meu coraçAO essa cadeira")
-- OUTPUT:
eu odeio do fundo do meu coraçAO essa cadeira
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:15:24) 
-- CODE:
print("eu odeio do fundo do meu coraçAO essa cadeira")
-- OUTPUT:
eu odeio do fundo do meu coraçAO essa cadeira
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:16:41) 
-- CODE:
print9(" que caralha eu fui escolher estatistica")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print9(" que caralha eu fui escolher estatistica")
NameError: name 'print9' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:38:02) 
-- CODE:
nota = 0
print(nota)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print9(" que caralha eu fui escolher estatistica")
NameError: name 'print9' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:38:37) 
-- CODE:
minha tona = 0

print(minha nota)

-- ERROR:
File "XXXX", line 1
    minha tona = 0
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:54:49) 
-- CODE:
vida = merda
print(vida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vida = merda
NameError: name 'merda' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:54:50) 
-- CODE:
vida = merda
print(vida)
-- EXECUTION TIME:
0.143958
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1752/1524/main.py", line 1, in <module>
    vida = merda
NameError: name 'merda' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:55:10) 
-- CODE:
vida = 0
print(vida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vida = merda
NameError: name 'merda' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:55:17) 
-- CODE:
vida = merda
print(vida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vida = merda
NameError: name 'merda' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:55:28) 
-- CODE:
vida = 0010001
print(vida)
-- ERROR:
File "XXXX", line 1
    vida = 0010001
                 ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:56:07) 
-- CODE:
vida = 0010001
print(vida)
-- ERROR:
File "XXXX", line 1
    vida = 0010001
                 ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:56:08) 
-- CODE:
vida = 0010001
print(vida)
-- ERROR:
File "XXXX", line 1
    vida = 0010001
                 ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:56:09) 
-- CODE:
vida = 0010001
print(vida)
-- EXECUTION TIME:
0.141114
-- ERROR:
  File "/home/codebench/codes/1752/1524/main.py", line 1
    vida = 0010001
                 ^
SyntaxError: invalid token

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:56:14) 
-- CODE:
vida = 0010001
print(vida)
-- ERROR:
File "XXXX", line 1
    vida = 0010001
                 ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:56:16) 
-- CODE:
vida = 0010001
print(vida)
-- EXECUTION TIME:
0.165668
-- ERROR:
  File "/home/codebench/codes/1752/1524/main.py", line 1
    vida = 0010001
                 ^
SyntaxError: invalid token

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
